# latex2json

./: .gitignore  CLAUDE.md  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
latex2json/: __init__.py  tex_file_extractor.py  tex_preamble.py  tex_reader.py
latex2json/expander/: _expansion_mixin.py  _file_io_mixin.py  _parsing_mixin.py  amstex_expander.py  expander.py  expander_core.py  macro_registry.py  registers.py  state.py  token_processor.py  types.py  utils.py
latex2json/latex_maps/: __init__.py  _latex2unicode_map.py  boxes.py  dimensions.py  environments.py  fonts.py  ignore_commands.py  latex2unicode.py  latex_ifs.py  math_commands.py  sections.py  si_unit_map.py  skips.py  url_commands.py  whitelist.py  whitelist_commands.py
latex2json/nodes/: README.md  __init__.py  base.py  base_nodes.py  bibliography_nodes.py  caption_node.py  csname_node.py  definition_nodes.py  environment_nodes.py  graphics_pdf_diagram_nodes.py  include_graphics_pdf_nodes.py  list_item_node.py  math_nodes.py  metadata_nodes.py  node_types.py  ref_cite_nodes.py  ref_cite_url_nodes.py  ref_node.py  section_nodes.py  semantic_nodes.py  syntactic_nodes.py  tabular_node.py  utils.py
latex2json/parser/: __init__.py  parser.py  parser_core.py  parser_parallel.py  state.py
latex2json/registers/: __init__.py  counters.py  registers.py  types.py  utils.py
latex2json/renderer/: __init__.py
latex2json/tokens/: __init__.py  catcodes.py  tokenizer.py  (+4 more)
tests/: test_graphics_project_root.py  test_import_subimport.py  test_tex_preamble.py  test_tex_reader.py  test_utils.py
(+389 files in other folders)
