[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "latex2json"
version = "1.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "colorama",
    "chardet",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/mrlooi/latex2json"

[tool.setuptools.packages.find]
exclude = ["tests*"]
